--- a/requirements.txt
+++ b/requirements.txt
@@ -12,7 +12,7 @@ Flask-Migrate==2.4.0
 Flask-Script==2.0.6
 Flask-SQLAlchemy==2.3.2
 funcsigs==1.0.2
-functools32==3.2.3.post2
+#functools32==3.2.3.post2
 itsdangerous==1.1.0
 Jinja2==2.10
 Mako==1.0.8
@@ -25,7 +25,7 @@ pluggy==0.9.0
 py==1.8.0
 pycodestyle==2.5.0
 pyflakes==2.1.1
-pysqlite==2.8.3
+#pysqlite==2.8.3
 pytest==4.4.0
 python-dateutil==2.8.0
 python-editor==1.0.4
